--- a/no.hal.scxml.scxmlxt.ui/plugin.xml
+++ b/no.hal.scxml.scxmlxt.ui/plugin.xml
@@ -6,7 +6,7 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.core.editor.XtextEditor"
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
             contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
             default="true"
             extensions="scxmlxt"
@@ -17,8 +17,8 @@
     <extension
         point="org.eclipse.ui.handlers">
         <handler
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.common.editor.hyperlinking.OpenDeclarationHandler"
-            commandId="org.eclipse.xtext.ui.common.editor.hyperlinking.OpenDeclaration">
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
+            commandId="org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclaration">
             <activeWhen>
                 <reference
                     definitionId="no.hal.scxml.Scxmlxt.Editor.opened">
@@ -26,7 +26,7 @@
             </activeWhen>
         </handler>
         <handler
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.core.editor.handler.ValidateActionHandler"
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
             commandId="no.hal.scxml.Scxmlxt.validate">
          <activeWhen>
             <reference
@@ -40,7 +40,7 @@
             <and>
                 <reference definitionId="isActiveEditorAnInstanceOfXtextEditor"/>
                 <with variable="activeEditor">
-                    <test property="org.eclipse.xtext.ui.core.editor.XtextEditor.languageName" 
+                    <test property="org.eclipse.xtext.ui.editor.XtextEditor.languageName" 
                         value="no.hal.scxml.Scxmlxt" 
                         forcePluginActivation="true"/>
                 </with>        
@@ -50,21 +50,21 @@
     <extension
             point="org.eclipse.ui.preferencePages">
         <page
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.core.editor.preferences.LanguageRootPreferencePage"
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
             id="no.hal.scxml.Scxmlxt"
             name="Scxmlxt">
             <keywordReference id="no.hal.scxml.ui.keyword_Scxmlxt"/>
         </page>
         <page
             category="no.hal.scxml.Scxmlxt"
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.common.editor.syntaxcoloring.SyntaxColoringPreferencePage"
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
             id="no.hal.scxml.Scxmlxt.coloring"
             name="Syntax Coloring">
             <keywordReference id="no.hal.scxml.ui.keyword_Scxmlxt"/>
         </page>
         <page
             category="no.hal.scxml.Scxmlxt"
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.common.editor.templates.XtextTemplatePreferencePage"
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
             id="no.hal.scxml.Scxmlxt.templates"
             name="Templates">
             <keywordReference id="no.hal.scxml.ui.keyword_Scxmlxt"/>
@@ -101,7 +101,7 @@
     </extension>
     <extension point="org.eclipse.ui.menus">
 		<menuContribution locationURI="popup:#TextEditorContext?endof=group.find">
-			<command commandId="org.eclipse.xtext.ui.core.editor.FindReferences">
+			<command commandId="org.eclipse.xtext.ui.editor.FindReferences">
 				<visibleWhen checkEnabled="false">
                 	<reference definitionId="no.hal.scxml.Scxmlxt.Editor.opened">
                 	</reference>
@@ -111,8 +111,8 @@
 	</extension>
 	<extension point="org.eclipse.ui.handlers">
 	    <handler
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.core.editor.findrefs.FindReferencesHandler"
-            commandId="org.eclipse.xtext.ui.core.editor.FindReferences">
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
+            commandId="org.eclipse.xtext.ui.editor.FindReferences">
             <activeWhen>
                 <reference
                     definitionId="no.hal.scxml.Scxmlxt.Editor.opened">
@@ -126,13 +126,13 @@
 	<extension
 		point="org.eclipse.emf.ecore.extension_parser">
 		<parser
-			class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
+			class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
 			type="scxmlxt">
 		</parser>
 	</extension>
 	<extension point="org.eclipse.xtext.extension_resourceServiceProvider">
         <resourceServiceProvider
-            class="no.hal.scxml.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.core.resource.IResourceUIServiceProvider"
+            class="no.hal.scxml.ui.ScxmlxtExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
             uriExtension="scxmlxt">
         </resourceServiceProvider>
     </extension>
